--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@
 }
 
 body {
- 
+ font-size: 1rem;
+ color: #d1e1f6;
 }
 
 html {
@@ -29,21 +30,90 @@ header{
   flex-direction: row;
 }
 
-.encabezado {
+.Fb-img {
+  display: block;
   width: 100%;
-  background:var(--blue);
-  display:inline-flex;
-  justify-content: flex-start;
-  /*flex-direction: row;*/
+  height: 7rem;
+  margin-top: -5rem;
 }
 
-input {
+form {
+  display: flex;
+  flex-direction: row;
+  gap: 1rem;
+  margin-right: 5rem;
+}
+
+.get-in {
+  margin-top: 3rem;
+}
+
+.check-in {
+  width: 100%;
+  background: var(--gray);
+  display: flex;
+  margin-bottom: 60rem;
+  flex-direction: row;
+  color: var(--dark);
+}
+
+.Form {
+  padding-top: 7rem;
+  padding-left: 15em;
+  padding-right: 0;
+}
+
+.ini-reg {
+  margin-left: -5rem;
+}
+
+.st-rg {
+  margin-top: -8rem;
+  padding-right: -20rem;
+  margin-bottom: 0;
+  margin-left: 5rem;
+}
+.like {
+  display: inline;
+  width: 40rem;
+  height: 70rem;
+  margin-left: 15rem;
+  margin-right: 5rem;
+  margin-top: 3rem;
+}
+
+.reg {
+  display: flex;
+  flex-direction: row;
+
+  gap: 1rem;
+  width: 20rem;
+  border: 2rem;
+  margin-left: -27rem;
+}
+.pass {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  width: 30rem;
+  border: 2rem;
+  margin-left: -14rem;
+}
+
+.reg-fb input {
+  height: 2rem;
   display: inline-block;
+  gap: 3rem;
+  border-radius: 5px;
+  background: white;
+  padding-left: 5px;
+  font-size: 1.5rem;
+  color: gainsboro;
 }
 
 .data1 {
   width: 100%;
-justify-items: flex-end;
+  justify-items: flex-end;
 }
 
 button {
@@ -52,4 +122,30 @@ button {
   padding: 0.5rem;
   text-align: center;
   width: 4.5rem;
+  border: 0.5rem;
+}
+
+p {
+  color: var(--white);
+}
+
+.date {
+  display: flex;
+  flex-direction: row;
+  margin-top: -1.5rem;
+  height: 2rem;
+}
+
+.date h5 {
+  color: #345598;
+  margin: 1px 0 0 10px;
+}
+
+select {
+  width: 5rem;
+  height: 2rem;
+  text-align: center;
+}
+.gen {
+  margin-right: 0 2rem 0 2rem;
 }
